# Idea-Simulator

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  RELEASE_v5.0.0.md  SECURITY.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
agents/: planner.py  reporter.py  researcher.py
api/: server.py
core/: accuracy_engine.py  constraint_engine.py  deep_simulator.py  llm_provider.py  orchestrator.py  simulator.py  stream_orchestrator.py  timeline.py
core/governance/: __init__.py  anti_hallucination.py  consistency_crosscheck.py  feasibility_check.py  reality_anchor.py  social_norm.py
data/: benchmarks.json  burn_rates.json  city_data.json  constraints.json  governance_anchors.json  historical_cases.json  methods.json  policies.json  reality_anchors.json  scenarios.json  seasonal_talent.json
frontend/: cities.js  cities_inline.js  extreme.html  index.html
tests/: test_core.py
