[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idea-simulator"
version = "17.0.0"
description = "Idea Simulator — 640 billion scenario combination, 1000-dimension future simulation engine"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Idea Simulator Team"}]
keywords = ["ai", "simulation", "monte-carlo", "prediction", "entrepreneurship", "future-studies"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "google-generativeai",
    "duckduckgo-search>=6.0",
    "numpy>=1.26.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
idea-simulator = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120
target-version = "py310"
